# axum-postgresql-template

./: .gitignore  Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
crates/libs/lib-postgresql/: Cargo.toml
crates/libs/lib-postgresql/src/: config.rs  convert.rs  lib.rs
crates/libs/lib-postgresql/src/ctx/: mod.rs
crates/libs/lib-postgresql/src/model/: error.rs  mod.rs
crates/libs/lib-postgresql/src/model/store/: error.rs  mod.rs
crates/libs/lib-postgresql/src/model/user_info/: bmc.rs  mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/services/api/: Cargo.toml
crates/services/api/src/: main.rs
