[package]
name = "lib-postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
# -- App Libs
lib-utils = { version = "0.1.0", path = "../../libs/lib-utils" }
lib-auth = { version = "0.1.0", path = "../../libs/lib-auth" }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time", "uuid"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde"] }
time = { version = "0.3.34", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["from"] }

[lints]
workspace = true
