[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-auth = { version = "0.1.0", path = "../../libs/lib-auth" }
# lib-rpc = { version = "0.1.0", path = "../../libs/lib-rpc" }
lib-postgresql = { version = "0.1.0", path = "../../libs/lib-postgresql" }
lib-utils = { version = "0.1.0", path = "../../libs/lib-utils" }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
